Fix overflow issue

--- a/style.css
+++ b/style.css
@@ -5,4 +5,6 @@
 .animation {
     text-align: center;
     font-size: 15vw;
+    white-space: nowrap;
+    overflow: hidden;
 }
